# vlm-norms

./: .gitignore  README.md  modal_run.py  plot_run.py  pyproject.toml  run.py
configs/: qwen3vl.yaml  smolvlm.yaml
models/: interventions.py  qwen3vl.py  smolvlm.py  utils.py
scripts/: alignment_ratio.py  attention_divergence_from_baseline.py  exp1_dose_response.py  exp2_kv_stability_per_layer.py  exp3_kv_cache_substitution_hist.py  initial_norms.py  kv_cache_substitution.py  kv_stability_under_alpha.py  logit_sensitivity.py  norm_vs_updates.py  summarize_condition_logit_comparisons.py  summarize_intervention_accuracy.py  text_dynamics_vision_vs_textonly.py
tests/: test_input_parsing.py
