[project]
name = "vlm-norms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.8.4",
    "matplotlib>=3.10.8",
    "modal>=1.4.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
