[project]
name = "vlm-norms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.8.4",
    "datbench",
    "matplotlib>=3.10.8",
    "modal>=1.4.1",
    "num2words>=0.5.14",
    "pyyaml>=6.0.3",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "transformers>=5.5.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv.sources]
datbench = { git = "https://github.com/bkal01/DatBench.git", rev = "c9b9de42015fccdca499a652d8d1a144e3a5d236" }
